# NetAsyncArchive

./: .gitignore  LICENSE  README.md
ClientProject/: CMakeLists.txt  Client.cpp  Client.h  clientHandler.h  main.cpp  vcpkg.json
ClientProject/client/: Client.cpp
Common/: CMakeLists.txt  socketUtils.cpp  socketUtils.h
FolderHandlerProject/: CMakeLists.txt  SocketQueue.cpp  SocketQueue.h  main.cpp  pathUtils.cpp  pathUtils.h  utils.cpp  utils.h  vcpkg.json
FolderHandlerProject/Server/: Server.cpp  Server.h
FolderHandlerProject/utils/: utils.h
ServerProject/: CMakeLists.txt  SwitchConcurrentQueue.h  concurrentQueue.h  main.cpp  vcpkg.json
ServerProject/Server/: Server.cpp  Server.h
ServerProject/utils/: utils.cpp  utils.h
